--- a/03_hw_06.ipynb
+++ b/03_hw_06.ipynb
@@ -30,6 +30,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5263157894736842"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10/19"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "19*0.5263157894736842"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -71,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +131,14 @@
    ],
    "source": [
     "#Начало вашего кода\n",
-    "\n",
+    "p_tp = 19/149\n",
+    "p_tn = 130/149\n",
+    "p_hp = 17/149\n",
+    "p_hn = 132/149\n",
+    "p_tp_hp = 10/17\n",
+    "p_tn_hp = 7/17\n",
+    "p_tp_hn = 9/132\n",
+    "p_tn_hn = 123/132\n",
     "#Конец вашего кода\n",
     "\n",
     "print(f\"{p_tp*100:.2f}%\")\n",
@@ -140,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +205,11 @@
    ],
    "source": [
     "#Начало вашего кода\n",
+    "p_t_hp_tp = 10/19\n",
+    "p_t_hp_tn = 7/130\n",
     "\n",
+    "p_f_hp_tp = p_hp*p_tp_hp/p_tp\n",
+    "p_f_hp_tn = p_hp*p_tn_hp/p_tn\n",
     "#Конец вашего кода\n",
     "print(\"На основании данных:\")\n",
     "print(f\"{p_t_hp_tp*100:.2f}%\")\n",
@@ -201,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -216,11 +267,21 @@
    ],
    "source": [
     "#Начало вашего кода\n",
-    "\n",
+    "p_hp_type = 'prior'\n",
+    "p_hp_tp_type = 'posterior'\n",
+    "p_hp_tn_type = 'posterior'\n",
     "#Конец вашего кода\n",
     "print(p_hp_type)\n",
     "print(p_hp_tp_type)\n",
-    "print(p_hp_tn_type)"
+    "print(p_hp_tn_type)\n",
+    "\n",
+    "# Априорная вероятность – это вероятность, присвоенная событию при отсутствии знания,\n",
+    "# поддерживающего его наступление.\n",
+    "# Как я понимаю, это вероятность наступления события без учёта других событий\n",
+    "\n",
+    "# Апостериорная вероятность – это условная вероятность события при некотором условии, \n",
+    "# рассматриваемая в противоположность его априорной вероятности.\n",
+    "# Как я понимаю, это вероятность наступления одного события вместе с другим событием"
    ]
   },
   {
@@ -274,6 +335,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$P(HIV^+|Test^+)$ = $P(HIV^+ \\cap Test^+)/P(HIV^+)$\n",
+    "\n",
+    "$P(Test^+|HIV^+)$ = $P(HIV^+ \\cap Test^+)/P(Test^+)$\n",
+    "\n",
+    "$P(HIV^+|Test^+)$ = $(P(HIV^+) * P(Test^+|HIV^+))/P(Test^+)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Пожалуйста, рассчитайте следующие вероятности:\n",
     "\n",
     "* $P(\"spam\")$, и присвойте результат переменной ```p_spam```.\n",
@@ -288,8 +360,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$P(HIV^+|Test^+)$ = $P(HIV^+ \\cap Test^+)/P(HIV^+)$\n",
+    "\n",
+    "$P(Test^+|HIV^+)$ = $P(HIV^+ \\cap Test^+)/P(Test^+)$\n",
+    "\n",
+    "$P(HIV^+|Test^+)$ = $(P(HIV^+) * P(Test^+|HIV^+))/P(Test^+)$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +393,15 @@
    ],
    "source": [
     "#Начало вашего кода\n",
-    "\n",
+    "p_spam = 0.27\n",
+    "p_non_spam = 1 - p_spam\n",
+    "p_urgent_given_spam = 0.46\n",
+    "p_urgent_given_non_spam = 0.19\n",
+    "p_urgent_and_spam = p_spam * p_urgent_given_spam\n",
+    "p_urgent_and_non_spam = p_non_spam * p_urgent_given_non_spam\n",
+    "p_urgent = p_spam * p_urgent_given_spam + p_non_spam * p_urgent_given_non_spam\n",
+    "p_spam_given_urgent = p_urgent_and_spam/p_urgent\n",
+    "p_non_spam_given_urgent = 1 - p_spam_given_urgent\n",
     "#Конец вашего кода\n",
     "\n",
     "print(f\"{p_spam*100:.2f}%\")\n",
@@ -358,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +464,29 @@
    ],
    "source": [
     "#Начало вашего кода\n",
+    "prior = p_spam\n",
+    "posterior = p_spam_given_urgent\n",
+    "ratio = posterior/prior\n",
     "\n",
+    "'''\n",
+    "априорная вероятность - это вероятность получить событие не имея никаких дополнительных данных или условий\n",
+    "вероятность правильно предсказать, что письмо спам 27%\n",
+    "\n",
+    "апостериорная вероятность - это вероятность события с учётом того, что у нас есть уточняющая информация\n",
+    "есть ещё одно событие, которое уже произошло\n",
+    "так вероятность того, что полученное письмо спам, если оно содержит слово 'urgent' 47.24%\n",
+    "\n",
+    "Соотношение между этими вероятностями показывает насколько сильно одно событие влияет на другое\n",
+    "\n",
+    "Например априорная вероятность лететь на Боинге 75%\n",
+    "а апостприорная вероятность того, что вы летите на Боинге, если произошло событие - опоздание 85.7%\n",
+    "85.7/75 = 1.14\n",
+    "\n",
+    "Я понимаю это так, что опоздание не так сильно влияет на событие лететь на Боинге, \n",
+    "как событие 'urgent' влияет на событие - получить спам\n",
+    "\n",
+    "Так получение письма со словом 'urgent' увеличивает шансы получить спам в 1.75 раза\n",
+    "'''\n",
     "#Конец вашего кода\n",
     "print(f\"{prior*100:.2f}%\")\n",
     "print(f\"{posterior*100:.2f}%\")\n",
@@ -391,6 +504,26 @@
     "47.24%\n",
     "1.75\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.1426666666666667"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "85.7/75"
    ]
   },
   {
@@ -429,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +578,10 @@
    ],
    "source": [
     "#Начало вашего кода\n",
-    "\n",
+    "answer_6a = 'non-exclusive' # бывают короли красной масти\n",
+    "answer_6b = 'non-exclusive' # валет может быть красной масти\n",
+    "answer_6c = 'exclusive' # пики - черная масть\n",
+    "answer_6d = 'exclusive' # буби - красная масть\n",
     "#Конец вашего кода\n",
     "print(answer_6a)\n",
     "print(answer_6b)\n",
@@ -484,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +636,10 @@
    ],
    "source": [
     "#Начало вашего кода\n",
-    "\n",
+    "answer_7a = 'independent' # не зависят и не исключают друг друга\n",
+    "answer_7b = 'independent' # не зависят и не исключают друг друга\n",
+    "answer_7c = 'dependent' # зависят и взаимо исключают друг друга\n",
+    "answer_7d = 'dependent' # зависят и взаимо исключают друг друга\n",
     "#Конец вашего кода\n",
     "print(answer_7a)\n",
     "print(answer_7b)\n",
@@ -546,7 +685,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
