--- a/03_hw_07.ipynb
+++ b/03_hw_07.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
       "7.14 %\n",
       "97.22 %\n",
       "3.69e-04 %\n",
-      "78.12 %\n",
+      "78.26 %\n",
       "71.87 %\n",
       "34.12 %\n"
      ]
@@ -78,7 +78,7 @@
     "p_2blue_black = 4/9*3/8*3/7\n",
     "p_larger_2 = 1 - 1/6*1/6\n",
     "p_four_kings = 4/52*3/51*2/50*1/49\n",
-    "p_ace_forth = 1 - 4/52 - 48/52*4/51 - 48/52*48/51*4/50      # СПРОСИТЬ\n",
+    "p_ace_forth = 1 - 4/52 - 48/52*4/51 - 48/52*47/51*4/50\n",
     "p_no_ace_4 = 48/52*47/51*46/50*45/49\n",
     "p_jack_5 = 1 - 48/52*47/51*46/50*45/49*44/48\n",
     "# Конец вашего кода\n",
@@ -241,26 +241,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1000"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "10**3"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
    "outputs": [
@@ -355,22 +335,87 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "$P(КХ\\cap НМ)=P(КХ)P(НМ)$\n",
+    "\n",
+    "$P(КХ|НМ)=P(КХ\\cap НМ)/P(НМ)=P(НМ)P(НМ|КХ)/P(НМ)$\n",
+    "\n",
+    "$P(A|B)=P(A\\cap B)/P(B)=P(B)P(B|A)/P(B)$\n",
+    "\n",
+    "$P(A\\cap B)=P(A)P(B)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Соответствует ожидаемому результату\n",
+      "67.57 %\n",
+      "48.65 %\n",
+      "21.62 %\n",
+      "27.03 %\n",
+      "89.19 %\n",
+      "----------------\n",
+      "# !!! НЕ СООТВЕТСТВУЕТ !!!\n",
+      "40.00 %\n",
+      "Если знаменатель заменить на \n",
+      "p_milk = 55.56 %\n",
+      "----------------\n",
+      "Соответствует ожидаемому результату\n",
+      "78.95 %\n",
+      "33.33 %\n"
+     ]
+    }
+   ],
    "source": [
     "# Начало вашего кода\n",
-    "p_bread\n",
-    "p_milk\n",
-    "p_only_milk\n",
+    "total = 100+150+80+40\n",
+    "\n",
+    "# Соответствует ожидаемому результату\n",
+    "p_bread = (100+150)/total\n",
+    "p_milk = (100+80)/total\n",
+    "p_only_milk = 80/total\n",
+    "p_bread_and_milk = 100/total\n",
+    "p_bread_or_milk = (250+180-100)/total\n",
+    "\n",
+    "# !!! НЕ СООТВЕТСТВУЕТ !!!\n",
+    "# !!! Если заменить p_bread на p_milk, то соответствует \n",
+    "p_milk_given_bread = p_bread_and_milk / p_bread\n",
+    "\n",
+    "\n",
+    "# Соответствует ожидаемому результату\n",
+    "# p_bread_given_no_milk\n",
+    "p_no_milk = (150+40)/total\n",
+    "p_bread_and_no_milk = 150/total\n",
+    "p_bread_given_no_milk = p_bread_and_no_milk / p_no_milk\n",
+    "\n",
+    "# p_fasttaxi_given_after_10 = p_fasttaxi * p_after_10_given_fasttaxi/p_after_10\n",
+    "\n",
+    "# p_no_milk_given_no_bread\n",
+    "p_no_bread = (80+40)/total\n",
+    "p_no_milk_and_no_bread = 40/total\n",
+    "p_no_milk_given_no_bread = p_no_milk_and_no_bread / p_no_bread\n",
     "# Конец вашего кода\n",
+    "\n",
+    "print('Соответствует ожидаемому результату')\n",
     "print(f\"{p_bread*100:.2f} %\")\n",
     "print(f\"{p_milk*100:.2f} %\")\n",
     "print(f\"{p_only_milk*100:.2f} %\")\n",
     "print(f\"{p_bread_and_milk*100:.2f} %\")\n",
     "print(f\"{p_bread_or_milk*100:.2f} %\")\n",
+    "print('----------------')\n",
+    "print('# !!! НЕ СООТВЕТСТВУЕТ !!!')\n",
     "print(f\"{p_milk_given_bread*100:.2f} %\")\n",
+    "print(f'Если знаменатель заменить на \\np_milk = {(p_bread_and_milk / p_milk)*100:.2f} %')\n",
+    "print('----------------')\n",
+    "print('Соответствует ожидаемому результату')\n",
     "print(f\"{p_bread_given_no_milk*100:.2f} %\")\n",
     "print(f\"{p_no_milk_given_no_bread*100:.2f} %\")"
    ]
@@ -415,7 +460,10 @@
    "outputs": [],
    "source": [
     "# Начало вашего кода\n",
-    "\n",
+    "e_ace_king = 'independent' # независимые так же как выкинуть 1 или выкинуть 5 на кубике\n",
+    "e_two_balls = 'independent' # независимые так как мы тот шарик, что вытащили кладём обратно в сумку\n",
+    "e_soccer = 'dependent' # Травма лучшего игрока влияет на качество игры и как следствие шанс победы\n",
+    "e_rainy_exam = 'independent' # Погода и расписание экзаменов независящие друг от друга события\n",
     "# Конец вашего кода\n",
     "print(e_ace_king)\n",
     "print(e_two_balls)\n",
@@ -466,12 +514,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.00 %\n",
+      "65.00 %\n",
+      "25.00 %\n",
+      "90.00 %\n",
+      "6.00 %\n",
+      "13.00 %\n",
+      "9.30 %\n",
+      "69.89 %\n",
+      "16.13 %\n"
+     ]
+    }
+   ],
    "source": [
     "# Начало вашего кода\n",
-    "\n",
+    "p_anytime = 0.1\n",
+    "p_gogo = 0.65\n",
+    "p_fasttaxi = 0.25\n",
+    "p_before_10_given_gogo = 1 - 0.1\n",
+    "p_after_10_given_fasttaxi = 0.06\n",
+    "p_after_10_given_anytime = 0.13\n",
+    "p_after_10 = p_anytime*0.13 + p_gogo*0.1 + p_fasttaxi*0.06\n",
+    "p_gogo_given_after_10 = p_gogo*0.1/p_after_10\n",
+    "p_fasttaxi_given_after_10 = p_fasttaxi*0.06/p_after_10\n",
     "# Конец вашего кода\n",
     "\n",
     "print(f\"{p_anytime*100:.2f} %\")\n",
