--- a/03_hw_07_07.ipynb
+++ b/03_hw_07_07.ipynb
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -514,13 +514,9 @@
      "output_type": "stream",
      "text": [
       "ham:\n",
-      "sam_vocab = 212\n",
-      "vocab = 281\n",
       "2.060234493124912e-14\n",
       "\n",
       "spam:\n",
-      "sam_vocab = 234\n",
-      "vocab = 281\n",
       "3.5332455808375355e-13\n",
       "\n",
       "\n",
@@ -536,11 +532,11 @@
     "    \n",
     "    # количество слов в спец словаре\n",
     "    sam_vocab_words = sum(sam_vocab.values())\n",
-    "    print('sam_vocab =', sam_vocab_words)\n",
+    "    #print('sam_vocab =', sam_vocab_words)\n",
     "    \n",
     "    # количество слов в общем словаре\n",
     "    vocab_words = len(vocab)\n",
-    "    print('vocab =', vocab_words)\n",
+    "    #print('vocab =', vocab_words)\n",
     "    \n",
     "    # очистка сообщения\n",
     "    message = clean(message)\n",
@@ -597,13 +593,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ham\n",
+      "spam\n",
+      "spam\n",
+      "spam\n"
+     ]
+    }
+   ],
    "source": [
     "def filter_spam(message, p_spam, spam_vocab, p_ham, ham_vocab, vocab, alpha=1):\n",
     "    #Начало вашего кода\n",
-    "\n",
+    "    p_ham_given_message = p_ham*calc_probs(ham_vocab, vocab, message, alpha)\n",
+    "    p_spam_given_message = p_spam*calc_probs(spam_vocab, vocab, message, alpha)\n",
+    "    \n",
+    "    condition = 'ham'\n",
+    "    if p_ham_given_message < p_spam_given_message:\n",
+    "        condition = 'spam'\n",
+    "    \n",
+    "    return condition\n",
     "    #Конец вашего кода\n",
     "\n",
     "\n",
